[package]
name = "tic-tac-tide"
version = "0.1.0"
authors = ["Pepo Viola <pepoviola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
futures-util = "0.3.8"
env_logger = "0.8.2"
petname = "1.0.12"
log = "0.4.11"
serde_json = "1.0.60"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
dotenv = "0.15"
tide-websockets = "0.1.0"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

# [dependencies.tide-websockets]
# git = "https://github.com/http-rs/tide-websockets"
# branch = "main"

# [patch.crates-io.http-types]
# path = "../http-rs/http-types/"
#git = "https://github.com/http-rs/http-types"
#branch = "stabilize-upgrade"

# [patch.crates-io.async-h1]
# git = "https://github.com/jbr/async-h1"
# branch = "upgrades"
