[package]
name = "tic-tac-tide"
version = "0.1.0"
authors = ["Javier Viola <pepoviola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-websockets = "0.1.0"
env_logger = "0.8.2"
async-std = { version = "1.8.0", features = ["attributes"] }
futures-util = "0.3.8"
petname = "1.0.13"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
dotenv = "0.15.0"

[patch.crates-io.tide-websockets]
#path = "../http-rs/tide-websockets/"
git = "https://github.com/http-rs/tide-websockets"
branch = "main"

# [patch.crates-io.async-h1]
# #path = "../http-rs/tide-websockets/"
# git = "https://github.com/mu2019/async-h1"
# branch = "patch-1"
